# cli-image-upscaler

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
docs/: faq.md  how-it-works.md  index.md  installation.md  usage.md
src/image_upscaler/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  upscaler.py  utils.py
tests/: conftest.py  test_ai_imports.py  test_cli.py  test_models.py  test_upscaler.py  test_utils.py
