[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "image-upscaler"
version = "0.1.0"
description = "Free, AI-powered CLI to upscale images up to 16x with Real-ESRGAN."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Phillip Kofler", email = "koflerphillip@gmail.com" }]
keywords = [
    "image",
    "upscaling",
    "super-resolution",
    "real-esrgan",
    "cli",
    "ai",
    "esrgan",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
# AI super-resolution backend. Heavy (pulls in PyTorch).
ai = [
    # basicsr is incompatible with NumPy 2.x (removed deprecated aliases).
    "numpy>=1.24,<3",
    "torch>=2.1",
    "torchvision>=0.16",
    "realesrgan>=0.3.0",
    "basicsr>=1.4.2",
    "gfpgan>=1.3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-Pillow",
]

[project.urls]
Homepage = "https://github.com/Wolfi-OwO/cli-image-upscaler"
Repository = "https://github.com/Wolfi-OwO/cli-image-upscaler"
Issues = "https://github.com/Wolfi-OwO/cli-image-upscaler/issues"
Changelog = "https://github.com/Wolfi-OwO/cli-image-upscaler/blob/main/CHANGELOG.md"

[project.scripts]
upscale = "image_upscaler.cli:app_main"
image-upscaler = "image_upscaler.cli:app_main"

[tool.hatch.build.targets.wheel]
packages = ["src/image_upscaler"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
# Typer relies on function-call defaults (B008) and resolves annotations at
# runtime, so `Optional[X]` must stay for Python 3.9 (PEP 604 unions would
# break Typer's get_type_hints on 3.9).
"src/image_upscaler/cli.py" = ["B008", "UP007", "UP045"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
# Analysis floor for the type checker; runtime support starts at 3.9 (the code
# uses `from __future__ import annotations` for 3.9-compatible PEP 604 unions).
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=image_upscaler --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["image_upscaler"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
